fixed issue of rocket

--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,13 @@
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+							<mainClass>com.banana.tictactoe.App</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
 			</plugin>
 		</plugins>
-    </build>
+	</build>
 
 </project>
